tests/fixtures/syntax/valid/action_continuation_marker_followed_by_space_is_not_continuation.repor
case "trailing space after marker is not a continuation" {
  $ echo hi \ 
  assert { exit 0 }
}
