tests/fixtures/syntax/invalid/double_slash_comment_not_supported.repor
// double slash is not a Reportage comment marker
case "x" {
  $ true
  assert {
    exit 0
  }
}
